--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@directus/sdk": "^18.0.3",
-    "next": "15.5.0",
+    "@next/third-parties": "^15.5.0",
+    "next": "^15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
